variables.Variables.scala.error
Erreur de compilation :
Variables:8: error: '=' expected but ';' found.
while (dejaFait != nbPas) {avance()}                              
^