variables.Variables.scala.code
var nbPas = 0
while(estSurBiscuit == False) {avance()}
if (avance()) {nbPas = nbPas + 1}                             
prendBiscuit()
droite()
droite()
var dejaFait == 0                               
while (dejaFait != nbPas) {avance()}                             